Adicionando arquivos iniciais, cursos e categorias

--- a/Views/template/menu.phtml
+++ b/Views/template/menu.phtml
@@ -6,7 +6,9 @@
 
         <a href="/professores/listar" class="btn btn-outline-dark">Professor</a>
 
-        <a href="/cursos/listar" class="btn btn-outline-dark">Cursos</a> 
+        <a href="/cursos/listar" class="btn btn-outline-dark">Cursos</a>
+        
+        <a href="/categorias/listar" class="btn btn-outline-dark">Categorias</a> 
     </div>
 
     <div class="text-end">
