--- a/Views/cursos/cadastrar.phtml
+++ b/Views/cursos/cadastrar.phtml
@@ -8,8 +8,14 @@
                 <input name="nome" type="text" id="nome" class="form-control mb-3">
 
                 <label for="categoria">Categoria</label>
-                <input name="categoria" type="text" id="categoria" class="form-control mb-3">
-
+                <select name="categoria" class="form-control mb-3">
+                    <?php
+                        foreach($categorias as $categoria){
+                            echo "
+                                <option value='{$categoria->id}'>{$categoria->nome}</option>
+                            ";
+                        }
+                    ?>
                 <label for="cargaHoraria">Carga Horaria</label>
                 <input name="cargaHoraria" type="number" id="cargaHoraria" class="form-control mb-3">
 
