--- a/Views/cursos/cadastrar.phtml
+++ b/Views/cursos/cadastrar.phtml
@@ -1,3 +1,4 @@
+
 <section class="mt-3 card card-body">
     <h1>Novo Curso</h1>
 
@@ -7,12 +8,22 @@
                 <label for="nome">Nome</label>
                 <input name="nome" type="text" id="nome" class="form-control mb-3">
 
-                <label for="categoria">Categoria</label>
-                <input name="categoria" type="text" id="categoria" class="form-control mb-3">
-                
-                <label for="cargaHoraria">Carga Horaria</label>
-                <input name="cargaHoraria" type="number" id="cargaHoraria" class="form-control mb-3">
+                <label for="descricao">Descrição</label>
+                <input name="descricao" type="text" id="email" class="form-control mb-3">
 
+                <label for="cargaHoraria">Carga Horária</label>
+                <input name="cargaHoraria" type="text" id="cpf" class="form-control mb-3">
+
+                <label for="categoria">Categoria</label>
+                <select name="categoria" class="form-control mb-3">
+                    <?php
+                        foreach($categorias as $categoria){
+                            echo "
+                                <option value='{$categoria->id}'>{$categoria->nome}</option>
+                            ";
+                        }
+                    ?>
+                </select>
                 <button class="btn btn-primary">Pronto</button>
             </form>
         </div>
