--- a/Views/cursos/editar.phtml
+++ b/Views/cursos/editar.phtml
@@ -1,22 +1,38 @@
-<?php
-    $cursos = $dados[0];
-?>
-<section class="mt-3 card card-body">
-    <h1>Editar Curso</h1>
 
-    <div class="row">
+<?php
+    $curso = $dados[0];
+?>
+
+<section class="card card-body">
+    <h1>Editar curso</h1>
+
+    <div class="row ">
         <div class="col">
             <form action="" method="POST">
-                <label for="nome">Nome</label>
-                <input name="nome" type="text" id="nome" class="form-control mb-3" value="<?php echo $cursos->nome; ?>">
-
-                <label for="categoria">Categoria</label>
-                <input name="categoria" type="text" id="categoria" class="form-control mb-3" value="<?php echo $cursos->categoria; ?>">
-
-                <label for="cargaHoraria">Carga Horaria</label>
-                <input name="cargaHoraria" type="number" id="cargaHoraria" class="form-control mb-3" value="<?php echo $cursos->cargaHoraria; ?>">
-
-                <button class="btn btn-primary">Pronto</button>
+                <label for="nome">Nome: </label>
+                <input name="nome" type="text" id="nome" class="form-control mb-3" value="<?php echo $curso->nome?>">
+                <label for="cargaHoraria">Carga horaria:</label>
+                <input name="cargaHoraria" type="number" id="cargaHoraria" class="form-control mb-3" value="<?php echo $curso->cargaHoraria?>">
+                <label for="descricao">Descrição: </label>
+                <input name="descricao" type="text" id="descricao" class="form-control mb-3" value="<?php echo $curso->descricao?>">
+                <label for="categoria">Categoria: </label>
+                <select name="categoria" id="categoria" class="form-select mb-3">
+                    <?php
+                    foreach($categorias as $cadaCategoria){
+                        if($curso->categoria_id == $cadaCategoria->id){
+                            echo "
+                            <option value='{$cadaCategoria->id}' selected>{$cadaCategoria->nome}</option>
+                            ";
+                        }
+                        else{
+                            echo "
+                            <option value='{$cadaCategoria->id}'>{$cadaCategoria->nome}</option>
+                            ";
+                        }
+                    }
+                    ?>
+                </select>
+                <button class="btn btn-outline-dark w-100">Enviar</button>
             </form>
         </div>
         <div class="col"></div>
