--- a/Views/cursos/cadastrar.phtml
+++ b/Views/cursos/cadastrar.phtml
@@ -24,7 +24,7 @@
                         }
                     ?>
                 </select>
-                <button class="btn btn-primary">Pronto</button>
+                <button class="btn btn-primary">Cadastrar</button>
             </form>
         </div>
         <div class="col"></div>
